# AndroidOpenGL

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/penck/gl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/gltest/: CMakeLists.txt  SceneManager.cpp  SceneManager.h  android_main.cpp  anim.cpp  anim.h  app_engine.cpp  app_engine.h  ascii_to_geom.cpp  ascii_to_geom.h  common.h  indexbuf.cpp  indexbuf.h  input_util.cpp  input_util.hpp  joystick-support.hpp  scene.cpp  scene.h  shader.cpp  shader.h  shape_render.cpp  shape_render.h  simplegeom.h  text_render.cpp  text_render.h  ui_scene.cpp  ui_scene.h  vertexbuf.cpp  vertexbuf.h  welcome_scene.cpp  welcome_scene.h
app/src/main/cpp/gltest/data/: alphabet.inl  strings.inl
app/src/main/cpp/gltest/glm/: CMakeLists.txt
app/src/main/java/com/penck/gl/: GltestActivity.java  MainActivity.java
app/src/main/java/com/penck/gl/glsl/: GLSLActivity.java  GLSLSurfaceView.java  ShaderUtil.java
app/src/main/java/com/penck/gl/glsl/readerer/: BackgroundReader.java  TextureRender.java
app/src/main/java/com/penck/gl/view/: Cube.java  CubeActivity.java  CubeColor.java  MyGLSurfaceView.java  MyRender.java
app/src/main/res/layout/: activity_glsl.xml  activity_main.xml  app_bar_glsl.xml  content_glsl.xml
app/src/main/res/menu/: activity_glsl_drawer.xml
app/src/main/res/raw/: texture_fragment_shader.glsl  texture_vertex_shader.glsl
app/src/main/res/values/: strings.xml
app/src/test/java/com/penck/gl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
